<?xml version="1.0" encoding="UTF-8"?>
<!-- ***** BEGIN LICENSE BLOCK *****
   - Version: MPL 1.1/GPL 2.0/LGPL 2.1
   -
   - The contents of this file are subject to the Mozilla Public License Version
   - 1.1 (the "License"); you may not use this file except in compliance with
   - the License. You may obtain a copy of the License at
   - http://www.mozilla.org/MPL/
   -
   - Software distributed under the License is distributed on an "AS IS" basis,
   - WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
   - for the specific language governing rights and limitations under the
   - License.
   -
   - The Original Code is part of dcm4che, an implementation of DICOM(TM) in
   - Java(TM), hosted at https://github.com/gunterze/dcm4che.
   -
   - The Initial Developer of the Original Code is
   - Agfa Healthcare.
   - Portions created by the Initial Developer are Copyright (C) 2011-2014
   - the Initial Developer. All Rights Reserved.
   -
   - Contributor(s):
   - Roman K <roman.khazankin@gmail.com>
   -
   - Alternatively, the contents of this file may be used under the terms of
   - either the GNU General Public License Version 2 or later (the "GPL"), or
   - the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
   - in which case the provisions of the GPL or the LGPL are applicable instead
   - of those above. If you wish to allow use of your version of this file only
   - under the terms of either the GPL or the LGPL, and not to allow others to
   - use your version of this file under the terms of the MPL, indicate your
   - decision by deleting the provisions above and replace them with the notice
   - and other provisions required by the GPL or the LGPL. If you do not delete
   - the provisions above, a recipient may use your version of this file under
   - the terms of any one of the MPL, the GPL or the LGPL.
   -
   - ***** END LICENSE BLOCK *****  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.dcm4che.dcm4chee-conf</groupId>
    <artifactId>dcm4chee-conf-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.1.0-SNAPSHOT</version>
    <properties>
        <dcm4che.version>3.3.8-SNAPSHOT</dcm4che.version>
    </properties>
    <scm>
        <connection>scm:git:ssh://git@ssh.github.com/dcm4che/dcm4chee-conf.git</connection>
        <developerConnection>scm:git:ssh://git@ssh.github.com/dcm4che/dcm4chee-conf.git</developerConnection>
        <url>http://github.com/dcm4che/dcm4chee-conf</url>
    </scm>
    <modules>
        <module>dcm4chee-conf-cdi</module>
        <module>dcm4chee-conf-db</module>
        <module>dcm4chee-conf-web</module>
        <module>dcm4chee-conf-decorators</module>
        <module>dcm4chee-conf-test</module>
        <module>dcm4chee-ee-core</module>
    </modules>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>javax</groupId>
                <artifactId>javaee-api</artifactId>
                <version>6.0</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.5</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh</artifactId>
                <version>2.2</version>
            </extension>
        </extensions>
    </build>
    <distributionManagement>
        <repository>
            <id>www.dcm4che.org</id>
            <name>dcm4che Repository</name>
            <url>sftp://www.dcm4che.org:443/home/maven2</url>
        </repository>
    </distributionManagement>
    <profiles>
        <profile>
            <id>csp</id>
            <properties>
                <hap-repository.url/>
            </properties>
            <distributionManagement>
                <repository>
                    <id>hap-repository</id>
                    <url>${hap-repository.url}</url>
                </repository>
            </distributionManagement>
        </profile>
    </profiles>
</project>
